Fixed hero image jump

--- a/esl/styles.css
+++ b/esl/styles.css
@@ -30,7 +30,7 @@ strong {
     background: url(/esl/bgimg.jpg);
     background-attachment: fixed;
     background-position: center;
-    background-size: cover;
+    background-size: 100rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,7 +42,6 @@ strong {
     font-size: 1rem;
     padding-top: .15rem;
 }
-
 
 .header img {
     max-width: 15rem;
